_0_run_cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: healtcare-cluster.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: healt-center-web-page-service
            port:
              number: 80
  - host: realtime-data.com
    http:
      paths:
      - path: /eeg
        pathType: Prefix
        backend:
          service:
            name: new-eeg-data-endpoint-service
            port:
              number: 80
      - path: /heartbeat
        pathType: Prefix
        backend:
          service:
            name: new-heartbeat-endpoint-service
            port:
              number: 80
